style: fix navbar hover flicker

--- a/src/AntOverrides.css
+++ b/src/AntOverrides.css
@@ -80,7 +80,9 @@ Global overrides of ant design styles
 }
 
 /* Menu */
-
+.ant-menu-title-content {
+  font-weight: 500;
+}
 .ant-menu-item-selected a,
 .ant-menu-submenu:hover,
 .ant-menu-submenu-title:hover,
@@ -88,17 +90,18 @@ Global overrides of ant design styles
 .ant-menu-submenu-title:active,
 .ant-menu-item-active a {
   color: #3f49e1 !important;
+  border: none !important;
 }
 .ant-menu-item-selected:hover::after,
 .ant-menu-item-selected::after,
+.ant-menu-item::after,
 .ant-menu-item-active::after {
-  /* border-bottom: 1px solid #3f49e1 !important; */
-  border-bottom: none !important;
+  border: none !important;
 }
 .ant-menu-submenu:hover::after,
+.ant-menu-item::after,
 .ant-menu-submenu-open::after {
-  /* border-bottom: 1px solid #3f49e1 !important; */
-  border-bottom: none !important;
+  border: none !important;
 }
 
 /* Steps */
